--- a/gulp/package.json
+++ b/gulp/package.json
@@ -10,15 +10,20 @@
   "author": "Cod3r",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
     "babel-core": "6.26.3",
     "babel-preset-env": "1.7.0",
     "gulp": "4.0.2",
-    "gulp-babel": "8.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "2.6.1",
     "gulp-sass": "5.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "3.0.2",
     "gulp-uglifycss": "1.1.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "babel": "^6.23.0"
   }
 }
