--- a/gulp/package.json
+++ b/gulp/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "babel": "^6.23.0"
+    "babel": "^6.23.0",
+    "gulp-cli": "^2.3.0"
   }
 }
